--- a/index.html
+++ b/index.html
@@ -135,13 +135,115 @@
       </div>
     </header>
     <main>
-      
+      <!-- surprise -->
+      <div class="container">
+        <h1>SURPRISE</h1>
+        <p>We have extra surprise for you. You can enjoy our extra fratures!</p>
+        <div class="row d-flex justify-content-evenly">
+          <div class="col-6 p-2">
+            <img class="w-100 rounded-pill" src="./images/theater.jpg" alt="" />
+          </div>
+          <div class="col-6 p-2">
+            <img class="w-100 rounded-pill" src="./images/bbq.jpg" alt="" />
+          </div>
+          <div class="col-6 p-2">
+            <img class="w-100 rounded-pill" src="./images/pool.jpg" alt="" />
+          </div>
+          <div class="col-6 p-2">
+            <img class="w-100 rounded-pill" src="./images/kitchen.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <!-- package -->
+      <div class="container">
+        <h1>Our Package</h1>
+        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-5">
+          <div class="card m-2 border border-0">
+            <div class="card-body">
+              <h4>Wedding</h4>
+              <h5 class="card-title">$300</h5>
+              <p class="card-text">We will arrange everything for you.</p>
+              <p><i class="fas fa-check px-3"></i> unlimited space</p>
+              <p><i class="fas fa-check px-3"></i> security</p>
+              <p><i class="fas fa-check px-3"></i> kids zone</p>
+              <p><i class="fas fa-check px-3"></i> pool</p>
+              <p><i class="fas fa-check px-3"></i> kitchen</p>
+              <p><i class="fas fa-check px-3"></i> movie</p>
+            </div>
+            <button type="button" class="btn btn-primary btn-lg">
+              Choose Plan
+            </button>
+          </div>
+
+          <div class="card m-2 border border-0">
+            <div class="card-body">
+              <h4>Birthday</h4>
+              <h5 class="card-title">$250</h5>
+              <p class="card-text">We will arrange everything for you.</p>
+              <p><i class="fas fa-check px-3"></i> unlimited space</p>
+              <p><i class="fas fa-check px-3"></i> security</p>
+              <p><i class="fas fa-check px-3"></i> kids zone</p>
+              <p><i class="fas fa-check px-3"></i> pool</p>
+              <p><i class="fas fa-check px-3"></i> kitchen</p>
+              <p><i class="fas fa-check px-3"></i> movie</p>
+            </div>
+            <button type="button" class="btn btn-primary btn-lg">
+              Choose Plan
+            </button>
+          </div>
+
+          <div class="card m-2 border border-0">
+            <div class="card-body">
+              <h4>Sunday Night</h4>
+              <h5 class="card-title">$100</h5>
+              <p class="card-text">We will arrange everything for you.</p>
+              <p><i class="fas fa-check px-3"></i> unlimited space</p>
+              <p><i class="fas fa-check px-3"></i> security</p>
+              <p><i class="fas fa-check px-3"></i> kids zone</p>
+              <p><i class="fas fa-check px-3"></i> pool</p>
+              <p><i class="fas fa-check px-3"></i> kitchen</p>
+              <p><i class="fas fa-check px-3"></i> movie</p>
+            </div>
+            <button type="button" class="btn btn-primary btn-lg">
+              Choose Plan
+            </button>
+          </div>
+
+          <div class="card m-2 border border-0 bg-primary text-light">
+            <div class="card-body">
+              <h4>Luxury</h4>
+              <h5 class="card-title">$600</h5>
+              <p class="card-text">We will arrange everything for you.</p>
+              <p><i class="fas fa-check px-3"></i> unlimited space</p>
+              <p><i class="fas fa-check px-3"></i> security</p>
+              <p><i class="fas fa-check px-3"></i> kids zone</p>
+              <p><i class="fas fa-check px-3"></i> pool</p>
+              <p><i class="fas fa-check px-3"></i> kitchen</p>
+              <p><i class="fas fa-check px-3"></i> movie</p>
+            </div>
+            <button type="button" class="btn btn-dark btn-lg m-2">
+              Choose Plan
+            </button>
+            <p
+              class="position-absolute top-0 start-100 translate-middle rounded-pill bg-danger p-2"
+            >
+              Hot
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
     <!-- bootstrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/525a769e3c.js"
       crossorigin="anonymous"
     ></script>
   </body>
