--- a/index.html
+++ b/index.html
@@ -49,94 +49,96 @@
       </nav>
 
       <!-- carousel -->
-      <div
-        id="carouselExampleCaptions"
-        class="carousel slide"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./images/banner.png" class="d-block w-100" alt="..." />
-            <div class="carousel-caption d-none d-md-block">
-              <h1>Perfect place for your Wedding</h1>
-              <p>
-                Begin your journey with the love of your life with a memorable
-                celebration!
-              </p>
-              <button type="button" class="btn btn-primary btn-lg">
-                Book Now!
-              </button>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./images/kids.jpg" class="d-block w-100" alt="..." />
-            <div class="carousel-caption d-none d-md-block">
-              <h1>Celebrate with the little angles here!</h1>
-              <p>
-                Kids are gonna love this place. We are always excied for their
-                arrival.
-              </p>
-              <button type="button" class="btn btn-primary btn-lg">
-                Book Now!
-              </button>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./images/party.jpg" class="d-block w-100" alt="..." />
-            <div class="carousel-caption d-none d-md-block">
-              <h1>Hangout with the childhood friends!</h1>
-              <p>Reunite and have a party with your best friends!</p>
-              <button type="button" class="btn btn-primary btn-lg">
-                Book Now!
-              </button>
-            </div>
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev"
+      <section>
+        <div
+          id="carouselExampleCaptions"
+          class="carousel slide"
+          data-bs-ride="carousel"
         >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./images/banner.png" class="d-block w-100" alt="..." />
+              <div class="carousel-caption d-none d-md-block">
+                <h1>Perfect place for your Wedding</h1>
+                <p>
+                  Begin your journey with the love of your life with a memorable
+                  celebration!
+                </p>
+                <button type="button" class="btn btn-primary btn-lg">
+                  Book Now!
+                </button>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/kids.jpg" class="d-block w-100" alt="..." />
+              <div class="carousel-caption d-none d-md-block">
+                <h1>Celebrate with the little angles here!</h1>
+                <p>
+                  Kids are gonna love this place. We are always excied for their
+                  arrival.
+                </p>
+                <button type="button" class="btn btn-primary btn-lg">
+                  Book Now!
+                </button>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/party.jpg" class="d-block w-100" alt="..." />
+              <div class="carousel-caption d-none d-md-block">
+                <h1>Hangout with the childhood friends!</h1>
+                <p>Reunite and have a party with your best friends!</p>
+                <button type="button" class="btn btn-primary btn-lg">
+                  Book Now!
+                </button>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
     </header>
     <main>
       <!-- surprise -->
-      <div class="container">
+      <section class="container">
         <h1>SURPRISE</h1>
         <p>We have extra surprise for you. You can enjoy our extra fratures!</p>
         <div class="row d-flex justify-content-evenly">
@@ -153,12 +155,14 @@
             <img class="w-100 rounded-pill" src="./images/kitchen.jpg" alt="" />
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- package -->
-      <div class="container">
+      <section class="container">
         <h1>Our Package</h1>
-        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-5">
+        <div
+          class="row row-cols-1 row-cols-md-3 row-cols-lg-5 justify-content-between"
+        >
           <div class="card m-2 border border-0">
             <div class="card-body">
               <h4>Wedding</h4>
@@ -232,9 +236,164 @@
             </p>
           </div>
         </div>
-      </div>
+      </section>
+      <!-- frequently ask -->
+      <section class="container">
+        <h1>Frequently Asked Question</h1>
+        <div class="row justify-content-around align-items-center">
+          <div class="col-6">
+            <div id="accordion">
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button
+                      class="btn btn-link"
+                      data-toggle="collapse"
+                      data-target="#collapseOne"
+                      aria-expanded="true"
+                      aria-controls="collapseOne"
+                    >
+                      Collapsible Group Item #1
+                    </button>
+                  </h5>
+                </div>
+
+                <div
+                  id="collapseOne"
+                  class="collapse show"
+                  aria-labelledby="headingOne"
+                  data-parent="#accordion"
+                >
+                  <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia
+                    aute, non cupidatat skateboard dolor brunch. Food truck
+                    quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                    sunt aliqua put a bird on it squid single-origin coffee
+                    nulla assumenda shoreditch et. Nihil anim keffiyeh
+                    helvetica, craft beer labore wes anderson cred nesciunt
+                    sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+                    Leggings occaecat craft beer farm-to-table, raw denim
+                    aesthetic synth nesciunt you probably haven't heard of them
+                    accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingTwo">
+                  <h5 class="mb-0">
+                    <button
+                      class="btn btn-link collapsed"
+                      data-toggle="collapse"
+                      data-target="#collapseTwo"
+                      aria-expanded="false"
+                      aria-controls="collapseTwo"
+                    >
+                      Collapsible Group Item #2
+                    </button>
+                  </h5>
+                </div>
+                <div
+                  id="collapseTwo"
+                  class="collapse"
+                  aria-labelledby="headingTwo"
+                  data-parent="#accordion"
+                >
+                  <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia
+                    aute, non cupidatat skateboard dolor brunch. Food truck
+                    quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                    sunt aliqua put a bird on it squid single-origin coffee
+                    nulla assumenda shoreditch et. Nihil anim keffiyeh
+                    helvetica, craft beer labore wes anderson cred nesciunt
+                    sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+                    Leggings occaecat craft beer farm-to-table, raw denim
+                    aesthetic synth nesciunt you probably haven't heard of them
+                    accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingThree">
+                  <h5 class="mb-0">
+                    <button
+                      class="btn btn-link collapsed"
+                      data-toggle="collapse"
+                      data-target="#collapseThree"
+                      aria-expanded="false"
+                      aria-controls="collapseThree"
+                    >
+                      Collapsible Group Item #3
+                    </button>
+                  </h5>
+                </div>
+                <div
+                  id="collapseThree"
+                  class="collapse"
+                  aria-labelledby="headingThree"
+                  data-parent="#accordion"
+                >
+                  <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia
+                    aute, non cupidatat skateboard dolor brunch. Food truck
+                    quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                    sunt aliqua put a bird on it squid single-origin coffee
+                    nulla assumenda shoreditch et. Nihil anim keffiyeh
+                    helvetica, craft beer labore wes anderson cred nesciunt
+                    sapiente ea proident. Ad vegan excepteur butcher vice lomo.
+                    Leggings occaecat craft beer farm-to-table, raw denim
+                    aesthetic synth nesciunt you probably haven't heard of them
+                    accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <img src="./images/people.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="bg-dark text-light">
+      <section
+        class="container d-flex justify-content-between align-items-center"
+      >
+        <!-- copyright -->
+        <p>
+          <i class="far fa-copyright"></i> 2022 universe, All rights reserved
+        </p>
+        <div class="app d-flex flex-column">
+          <p>Get The App</p>
+          <button
+            type="button"
+            class="btn btn-dark d-inline-flex flex-wrap align-items-center border border-white rounded-3"
+          >
+            <p><i class="fab fa-apple"></i></p>
+            <div>
+              <p>
+                <small>Download on the</small> <br />
+                App Store
+              </p>
+            </div>
+          </button>
+          <button
+            type="button"
+            class="btn btn-dark d-inline-flex flex-wrap align-items-center border border-white rounded-3"
+          >
+            <p><i class="fab fa-google-play"></i></p>
+            <div>
+              <p>
+                <small>Download on the</small> <br />
+                Play Store
+              </p>
+            </div>
+          </button>
+        </div>
+      </section>
+    </footer>
     <!-- bootstrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
