--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-link active px-3" href="#">Home</a>
-                <a class="nav-link active ps-5" href="#">About Us</a>
-                <a class="nav-link active ps-5" href="#">Contact Us</a>
-                <a class="nav-link active ps-5" href="#">Subscribe</a>
+                <a class="nav-link active ps-5" href="#surprise">Surprise</a>
+                <a class="nav-link active ps-5" href="#package">Package</a>
+                <a class="nav-link active ps-5" href="#faq">FAQ</a>
               </div>
             </div>
           </div>
@@ -43,7 +43,7 @@
         <div
           id="carouselExampleCaptions"
           class="carousel slide"
-          data-bs-ride=""
+          data-bs-ride="carousel"
         >
           <div class="carousel-indicators d-none">
             <button
@@ -134,7 +134,7 @@
     </header>
     <main>
       <!-- surprise -->
-      <section class="container p-5">
+      <section class="container p-5" id="surprise">
         <h1 class="text-center">SURPRISE</h1>
         <p class="text-center">
           Extra surprises are waiting for you. Explore when you visit!
@@ -156,7 +156,7 @@
       </section>
 
       <!-- package -->
-      <section class="container p-5">
+      <section class="container p-5" id="package">
         <h1 class="text-center">Our Package</h1>
         <div
           class="row row-cols-1 row-cols-md-3 row-cols-lg-5 justify-content-between"
@@ -257,7 +257,7 @@
         </div>
       </section>
       <!-- frequently ask -->
-      <section class="container p-5">
+      <section class="container p-5" id="faq">
         <h1 class="text-center">Frequently Asked Question</h1>
         <div
           class="container d-flex justify-content-between align-items-center flex-lg-row flex-column-reverse"
